--- a/index.html
+++ b/index.html
@@ -4,6 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vacature-detailpagina Avocado Media</title>
+    <title>Vacature-detailpagina Avocado Media</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<body>
+
+    <header>
+    <h1>Logo Avocado Media</h1>
+    </header>
+
+    <nav>
+        <h2>Menu</h2>
+        <ul>
+            <li>
+                <a href="#">Cases</a>
+            </li>
+            <li>
+                <a href="#">Over</a>
+            </li>
+            <li>
+                <a href="#">Aanpak</a>
+            </li>
+            <li>
+                <a href="#">Nieuws</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>    
+        </ul>
+    </nav>
+
+    <main>
+        <section class="top-head" id="intro">
+            <h2>
+                Kom jij bij ons werken?
+            </h2>
+            <p>
+                Wij zijn altijd op zoek naar design- en development talent. Ben jij dat? Wij leren je graag kennen.
+            </p>
+            <img src="assets/team_picture_avocado_media_1666337c90.jpg" alt="Team Avocado Media">
+        </section>
+        
+        <section class="top-green-circle" id="actueel">          
+            <h3>
+                Actueel
+            </h3>
+            <p>
+                Onderstaand zie je onze actuele vacatures. Staat hier voor jou geen passende functie tussen, maar denk je wel een aanvulling voor ons team te zijn? Voor een open sollicitatie mail dan <strong>info@avocado-media.nl</strong>
+            </p>
+        <article class="container-grid">
+            <img src="assets/frontend-device-work.jpg" alt="Vacature Front-end Developer">
+                <ul>
+                    <li class="badge-light-blue">Nieuw!</li>
+                </ul>
+            <div class="arrow-dark-line">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="w-6 h-6 stroke-2"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25"></path></svg>
+            </div>
+            <h3>
+                Front-end Developer (medior)
+            </h3>
+            <p>
+                Onze agency is op zoek naar een medior front-end developer die ons joint bij onze missie: zoveel mogelijk mensen verbinden met digitale oplossingen.
+            </p>
+        </article>
+    </main>
+
+    
