--- a/vac-frontender.html
+++ b/vac-frontender.html
@@ -37,23 +37,28 @@
 
     <main>
         <section class="top-head" id="intro">
+            <p>
+                Vacatures  >  Front-end Developer (medior)
+            </p>
             <h2>
-                Kom jij bij ons werken?
+                Front-end Developer (medior)
             </h2>
             <p>
-                Wij zijn altijd op zoek naar design- en development talent. Ben jij dat? Wij leren je graag kennen.
+                Onze agency is op zoek naar een medior 
+                front-end developer die ons joint bij onze missie: zoveel mogelijk mensen verbinden met digitale oplossingen.
             </p>
-            <img src="assets/team_picture_avocado_media_1666337c90.jpg" alt="Team Avocado Media">
+            <img src="assets/avocado_media_meeting.webp" alt="Meeting Avocado Media">
         </section>
         
-        <section class="top-green-circle" id="actueel">          
+        <section class="con-join-team" id="join">          
             <h3>
-                Actueel
+                Join ons team en werk aan toffe projecten
             </h3>
             <p>
-                Onderstaand zie je onze actuele vacatures. Staat hier voor jou geen passende functie tussen, maar denk je wel een aanvulling voor ons team te zijn? Voor een open sollicitatie mail dan <strong>info@avocado-media.nl</strong>
+                Als front-end developer ga jij werken aan toffe websites, platformen en webapps. Je zult werken aan strakke-, schaalbare code en meedenken over de nieuwste- en beste technieken. Je zult 80% van de week bezig zijn met development werkzaamheden en 20% events, refinements en persoonlijke ontwikkeling.
+                Binnen Avocado Media zijn wij continu bezig met ontwikkeling. Als bedrijf en op persoonlijk vlak. Je komt te werken in een zeskoppig team van developers en designers in Amsterdam Oost. Ons harde werk wisselen wij graag af met één (oke, minimaal één) potje Mario Kart, tafeltennis en gezellige bedrijfsuitjes.
             </p>
-        <article class="con-grid">
+        <article class="con-bg-light-blue">
             <img src="assets/frontend-device-work.jpg" alt="Vacature Front-end Developer">
                 <ul>
                     <li class="badge-light-blue">Nieuw!</li>
