--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>
                 Onderstaand zie je onze actuele vacatures. Staat hier voor jou geen passende functie tussen, maar denk je wel een aanvulling voor ons team te zijn? Voor een open sollicitatie mail dan <strong>info@avocado-media.nl</strong>
             </p>
-        <article class="con-grid">
+        <article class="con-offer-jobs" id="actuele-vacatures">
             <img src="assets/frontend-device-work.jpg" alt="Vacature Front-end Developer">
                 <ul>
                     <li class="badge-light-blue">Nieuw!</li>
