--- a/index.html
+++ b/index.html
@@ -10,30 +10,29 @@
 
 <body>
 
-    <header>
-    <h1>Logo Avocado Media</h1>
-    </header>
-
-    <nav>
-        <h2>Menu</h2>
-        <ul>
-            <li>
-                <a href="#">Cases</a>
-            </li>
-            <li>
-                <a href="#">Over</a>
-            </li>
-            <li>
-                <a href="#">Aanpak</a>
-            </li>
-            <li>
-                <a href="#">Nieuws</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>    
-        </ul>
-    </nav>
+    <!-- <header>
+    <img src="assets/logo-avocadomedia-2022-color.png" alt="Logo Avocado Media">
+        <nav>
+            <h2>Menu</h2>
+            <ul>
+                <li>
+                    <a href="#">Cases</a>
+                </li>
+                <li>
+                    <a href="#">Over</a>
+                </li>
+                <li>
+                    <a href="#">Aanpak</a>
+                </li>
+                <li>
+                    <a href="#">Nieuws</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>    
+            </ul>
+        </nav>
+    </header> -->
 
     <main>
         <section class="top-head" id="intro">
@@ -46,20 +45,24 @@
             <img src="assets/team_picture_avocado_media_1666337c90.jpg" alt="Team Avocado Media">
         </section>
         
-        <section class="top-green-circle" id="actueel">          
+        <section class="current-jobs" id="actueel">
+            <div class="bg-light-blue-circle"></div>
             <h3>
                 Actueel
             </h3>
             <p>
-                Onderstaand zie je onze actuele vacatures. Staat hier voor jou geen passende functie tussen, maar denk je wel een aanvulling voor ons team te zijn? Voor een open sollicitatie mail dan <strong>info@avocado-media.nl</strong>
+                Onderstaand zie je onze actuele vacatures. Staat hier voor jou geen passende functie tussen, maar denk je wel een aanvulling voor ons team te zijn? Voor een open sollicitatie mail dan <a href = "mailto:info@avocado-media.nl">info@avocado-media.nl</a>
             </p>
         <article class="con-offer-jobs" id="actuele-vacatures">
             <img src="assets/frontend-device-work.jpg" alt="Vacature Front-end Developer">
-                <ul>
-                    <li class="badge-light-blue">Nieuw!</li>
-                </ul>
-            <div class="arrow-dark-line">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="w-6 h-6 stroke-2"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25"></path></svg>
+                
+            <div class="section-badge-arrow">
+                    <ul>
+                        <li class="badge-light-blue">Nieuw!</li>
+                    </ul>
+                <div class="arrow-dark-line">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="w-6 h-6 stroke-2"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25"></path></svg>
+                </div>
             </div>
             <h3>
                 Front-end Developer (medior)
