--- a/vac-frontender.html
+++ b/vac-frontender.html
@@ -10,35 +10,34 @@
 
 <body>
 
-    <header>
-    <h1>Logo Avocado Media</h1>
-    </header>
-
-    <nav>
-        <h2>Menu</h2>
-        <ul>
-            <li>
-                <a href="#">Cases</a>
-            </li>
-            <li>
-                <a href="#">Over</a>
-            </li>
-            <li>
-                <a href="#">Aanpak</a>
-            </li>
-            <li>
-                <a href="#">Nieuws</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>    
-        </ul>
-    </nav>
+    <!-- <header>
+        <h1>Logo Avocado Media</h1>
+            <nav>
+                <h2>Menu</h2>
+                <ul>
+                    <li>
+                        <a href="#">Cases</a>
+                    </li>
+                    <li>
+                        <a href="#">Over</a>
+                    </li>
+                    <li>
+                        <a href="#">Aanpak</a>
+                    </li>
+                    <li>
+                        <a href="#">Nieuws</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>    
+                </ul>
+            </nav>
+        </header> -->
 
     <main>
         <section class="con-top-head" id="intro">
             <p>
-                Vacatures  >  Front-end Developer (medior)
+                <a href="#">Vacatures</a>  >  Front-end Developer (medior)
             </p>
             <h2>
                 Front-end Developer (medior)
@@ -54,10 +53,8 @@
             <h3>
                 Join ons team en werk aan toffe projecten
             </h3>
-            <p>
-                Als front-end developer ga jij werken aan toffe websites, platformen en webapps. Je zult werken aan strakke-, schaalbare code en meedenken over de nieuwste- en beste technieken. Je zult 80% van de week bezig zijn met development werkzaamheden en 20% events, refinements en persoonlijke ontwikkeling.
-                Binnen Avocado Media zijn wij continu bezig met ontwikkeling. Als bedrijf en op persoonlijk vlak. Je komt te werken in een zeskoppig team van developers en designers in Amsterdam Oost. Ons harde werk wisselen wij graag af met één (oke, minimaal één) potje Mario Kart, tafeltennis en gezellige bedrijfsuitjes.
-            </p>
+            <p>Als front-end developer ga jij werken aan toffe websites, platformen en webapps. Je zult werken aan strakke-, schaalbare code en meedenken over de nieuwste- en beste technieken. Je zult 80% van de week bezig zijn met development werkzaamheden en 20% events, refinements en persoonlijke ontwikkeling.</p>
+            <p>Binnen Avocado Media zijn wij continu bezig met ontwikkeling. Als bedrijf en op persoonlijk vlak. Je komt te werken in een <a href="https://avocado.media/over">zeskoppig team</a> van developers en designers in Amsterdam Oost. Ons harde werk wisselen wij graag af met één (oke, minimaal één) potje Mario Kart, tafeltennis en gezellige bedrijfsuitjes.</p>
         </section>
 
         <section class="con-why-us" id="waarom-ons">
@@ -148,7 +145,7 @@
             </p>
             <ol>
                 <li>
-                    <p>Laat van je horen via @avocado-media.nl of 0207371265</p>
+                    <p>Laat van je horen via <a href = "mailto:info@avocado-media.nl">info@avocado-media.nl</a> of <a href="tel:0207371265">0207371265</a></p>
                 </li>
                 <li>
                     <p>Wij nodigen jou uit voor een kennismaking en bakje koffie</p>
@@ -197,5 +194,9 @@
             </form>
         </section>
     </main>
+
+</body>
+</html> 
+
 
     
