--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vacature-detailpagina Avocado Media</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Saira:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">    
+
 </head>
 
 <body>
@@ -53,7 +57,9 @@
             <p>
                 Onderstaand zie je onze actuele vacatures. Staat hier voor jou geen passende functie tussen, maar denk je wel een aanvulling voor ons team te zijn? Voor een open sollicitatie mail dan <a href = "mailto:info@avocado-media.nl">info@avocado-media.nl</a>
             </p>
-        <article class="con-offer-jobs" id="actuele-vacatures">
+        </section>
+
+        <section class="con-offer-jobs" id="actuele-vacatures">
             <img src="assets/frontend-device-work.jpg" alt="Vacature Front-end Developer">
                 
             <div class="section-badge-arrow">
@@ -70,7 +76,10 @@
             <p>
                 Onze agency is op zoek naar een medior front-end developer die ons joint bij onze missie: zoveel mogelijk mensen verbinden met digitale oplossingen.
             </p>
-        </article>
+        </section>
     </main>
+
+</body>
+</html> 
 
     
