--- a/vac-frontender.html
+++ b/vac-frontender.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vacature-detailpagina Avocado Media</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Saira:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -57,7 +61,7 @@
             <p>Binnen Avocado Media zijn wij continu bezig met ontwikkeling. Als bedrijf en op persoonlijk vlak. Je komt te werken in een <a href="https://avocado.media/over">zeskoppig team</a> van developers en designers in Amsterdam Oost. Ons harde werk wisselen wij graag af met één (oke, minimaal één) potje Mario Kart, tafeltennis en gezellige bedrijfsuitjes.</p>
         </section>
 
-        <section class="con-why-us" id="waarom-ons">
+        <article class="con-why-us" id="waarom-ons">
             <h3>
                 Waarom Avocado Media?
             </h3>
@@ -106,7 +110,7 @@
                     <p>Teamuitjes- en weekenden, hackathons en vrijmibo’s.</p>
                 </li>
             </ul>
-        </section>    
+        </article>    
 
             <!-- HIER KOMT EEN CAROUSEL -->
             
@@ -136,7 +140,7 @@
             </ul>
         </section>
 
-        <section class="con-process" id="solicitatie-proces">
+        <article class="con-process" id="solicitatie-proces">
             <h3>
                 Zo ziet ons sollicitatie proces eruit:
             </h3>
@@ -157,7 +161,7 @@
                     <p>Wij doen een goed voorstel</p>
                 </li>
             </ol>
-        </section>
+        </article>
 
         <section class="con-application" id="solliciteren">
             <h3>
