code clean update

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
         </section>
 
         <section class="con-offer-jobs" id="actuele-vacatures">
-            <img src="assets/frontend-device-work.jpg" alt="Vacature Front-end Developer">
-                
+            <div>
+                <img src="assets/frontend-device-work.jpg" alt="Vacature Front-end Developer">
+            </div>
+            
             <div class="section-badge-arrow">
                     <ul>
                         <li class="badge-light-blue">Nieuw!</li>
