update clean code

--- a/index-2.html
+++ b/index-2.html
@@ -46,11 +46,13 @@
             <h2>
                 Front-end Developer (medior)
             </h2>
-            <p>
-                Onze agency is op zoek naar een medior 
-                front-end developer die ons joint bij onze missie: zoveel mogelijk mensen verbinden met digitale oplossingen.
-            </p>
-            <img src="assets/avocado_media_meeting.webp" alt="Meeting Avocado Media">
+            <div>
+                <p>
+                    Onze agency is op zoek naar een medior 
+                    front-end developer die ons joint bij onze missie: zoveel mogelijk mensen verbinden met digitale oplossingen.
+                </p>
+                <img src="assets/avocado_media_meeting.webp" alt="Meeting Avocado Media">
+            </div>
         </section>
         
         <section class="con-join-team" id="join">          
