--- a/index-2.html
+++ b/index-2.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Saira:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 
 </head>
 
@@ -39,10 +40,10 @@
         </header> -->
 
     <main>
-        <section class="con-top-head" id="intro">
-            <p>
-                <a href="#">Vacatures</a>  >  Front-end Developer (medior)
-            </p>
+        <section class="con-top-head reveal" id="intro">
+            <nav>
+                <a href="https://rosahoffer.github.io/the-startup-responsive-interactieve-website">Vacatures</a>  >  Front-end Developer (medior)
+            </nav>
             <h2>
                 Front-end Developer (medior)
             </h2>
