--- a/index-2.html
+++ b/index-2.html
@@ -56,7 +56,7 @@
             </div>
         </section>
         
-        <section class="con-join-team" id="join">          
+        <section class="con-join-team- reveal" id="join">          
             <h3>
                 Join ons team en werk aan toffe projecten
             </h3>
@@ -117,7 +117,7 @@
 
             <!-- HIER KOMT EEN CAROUSEL -->
             
-        <section class="con-expectations" id="verwachtingen">
+        <section class="con-expectations reveal" id="verwachtingen">
             <h3>
                 Waar wij op hopen:
             </h3>
@@ -166,7 +166,7 @@
             </ol>
         </article>
 
-        <section class="con-application" id="solliciteren">
+        <section class="con-application reveal" id="solliciteren">
             <h3>
                 Solliciteren?
             </h3>
