--- a/index-2.html
+++ b/index-2.html
@@ -40,7 +40,7 @@
         </header> -->
 
     <main>
-        <section class="con-top-head reveal" id="intro">
+        <section class="con-top-head" id="intro">
             <nav>
                 <a href="https://rosahoffer.github.io/the-startup-responsive-interactieve-website">Vacatures</a>  >  Front-end Developer (medior)
             </nav>
@@ -64,7 +64,7 @@
             <p>Binnen Avocado Media zijn wij continu bezig met ontwikkeling. Als bedrijf en op persoonlijk vlak. Je komt te werken in een <a href="https://avocado.media/over">zeskoppig team</a> van developers en designers in Amsterdam Oost. Ons harde werk wisselen wij graag af met één (oke, minimaal één) potje Mario Kart, tafeltennis en gezellige bedrijfsuitjes.</p>
         </section>
 
-        <article class="con-why-us" id="waarom-ons">
+        <article class="con-why-us reveal" id="waarom-ons">
             <h3>
                 Waarom Avocado Media?
             </h3>
@@ -143,7 +143,7 @@
             </ul>
         </section>
 
-        <article class="con-process" id="solicitatie-proces">
+        <article class="con-process reveal" id="solicitatie-proces">
             <h3>
                 Zo ziet ons sollicitatie proces eruit:
             </h3>
