--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Saira:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">    
     <script src="script.js" defer></script>
-    
+
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     </header> -->
 
     <main>
-        <section class="top-head reveal" id="intro">
+        <section class="top-head" id="intro">
             <h2>
                 Kom jij bij ons werken?
             </h2>
@@ -60,7 +60,7 @@
             </p>
         </section>
 
-        <section class="con-offer-jobs" id="actuele-vacatures">
+        <section class="con-offer-jobs reveal" id="actuele-vacatures">
             <div>
                 <a href="https://rosahoffer.github.io/the-startup-responsive-interactieve-website/index-2">
                     <img src="assets/frontend-device-work.jpg" alt="Vacature Front-end Developer">
