--- a/index-2.html
+++ b/index-2.html
@@ -48,11 +48,14 @@
                 Front-end Developer (medior)
             </h2>
             <div>
-                <p>
+                <div>
+                    <p>
                     Onze agency is op zoek naar een medior 
                     front-end developer die ons joint bij onze missie: zoveel mogelijk mensen verbinden met digitale oplossingen.
-                </p>
-                <img src="assets/avocado_media_meeting.webp" alt="Meeting Avocado Media">
+                    </p>
+                    <a href="#solliciteren">Solliciteer nu</a>
+                </div>
+                    <img src="assets/avocado_media_meeting.webp" alt="Meeting Avocado Media">
             </div>
         </section>
         
