--- a/index-2.html
+++ b/index-2.html
@@ -55,7 +55,7 @@
                     </p>
                     <a href="#solliciteren">Solliciteer nu</a>
                 </div>
-                    <img src="assets/avocado_media_meeting.webp" alt="Meeting Avocado Media">
+                <img src="assets/avocado_media_meeting.webp" alt="Meeting Avocado Media">
             </div>
         </section>
         
@@ -118,7 +118,31 @@
             </ul>
         </article>    
 
-            <!-- HIER KOMT EEN CAROUSEL -->
+        <section class="image-carousel" id="sfeerimpressie">
+            <div class="image-list">
+              <a href="#image-1">
+                <img class="image-list-img" src="assets/1-sfeerimpressie-avocadomedia.png" alt="Sfeerimpressie Gesprek" />
+              </a>
+              <a href="#image-2">
+                <img class="image-list-img" src="assets/2-sfeerimpressie-avocadomedia.png" alt="Sfeerimpressie Werk" />
+              </a>
+              <a href="#image-3">
+                <img class="image-list-img" src="assets/3-sfeerimpressie-avocadomedia.png" alt="Sfeerimpressie Vrijmibo" />
+              </a>
+              <a href="#image-4">
+                <img class="image-list-img" src="assets/4-sfeerimpressie-avocadomedia.png" alt="Sfeerimpressie Kantoor" />
+              </a>
+              <a href="#image-5">
+                <img class="image-list-img" src="assets/5-sfeerimpressie-avocadomedia.png" alt="Sfeerimpressie Vergadering" />
+              </a>
+              <a href="#image-6">
+                <img class="image-list-img" src="assets/6-sfeerimpressie-avocadomedia.png" alt="Sfeerimpressie Hond" />
+              </a>
+              <a href="#image-7">
+                <img class="image-list-img" src="assets/7-sfeerimpressie-avocadomedia.png" alt="Sfeerimpressie Lunch" />
+              </a>
+            </div>
+        </section>
             
         <section class="con-expectations reveal" id="verwachtingen">
             <h3>
