foto cover aangepast

--- a/index-2.html
+++ b/index-2.html
@@ -15,10 +15,9 @@
 
 <body>
 
-    <!-- <header>
-        <h1>Logo Avocado Media</h1>
+    <header>
+        <img src="assets/logo-avocadomedia-2022-color.png" alt="Logo Avocado Media">
             <nav>
-                <h2>Menu</h2>
                 <ul>
                     <li>
                         <a href="#">Cases</a>
@@ -37,7 +36,7 @@
                     </li>    
                 </ul>
             </nav>
-        </header> -->
+        </header>
 
     <main>
         <section class="con-top-head" id="intro">
