--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
 <body>
 
-    <!-- <header>
+    <header>
     <img src="assets/logo-avocadomedia-2022-color.png" alt="Logo Avocado Media">
         <nav>
-            <h2>Menu</h2>
             <ul>
                 <li>
                     <a href="#">Cases</a>
@@ -37,7 +36,7 @@
                 </li>    
             </ul>
         </nav>
-    </header> -->
+    </header>
 
     <main>
         <section class="top-head" id="intro">
@@ -47,9 +46,12 @@
             <p>
                 Wij zijn altijd op zoek naar design- en development talent. Ben jij dat? Wij leren je graag kennen.
             </p>
-            <img src="assets/team_picture_avocado_media_1666337c90.jpg" alt="Team Avocado Media">
         </section>
-        
+
+        <div class="main-front-image">
+            <img src="assets/team_picture_avocado_media_1666337c90.jpg" alt="Team Avocado Media">
+        </div>
+
         <section class="current-jobs" id="actueel">
             <div class="bg-light-blue-circle"></div>
             <h3>
